--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: aioselectel_api
+name: Upload Python Package
 
 on:
   release:
@@ -22,7 +22,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: aioselectel_api
+    - name: Set up Python
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
@@ -35,5 +35,5 @@ jobs:
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
-        user: __token__
+        user: azamtoiri
         password: ${{ secrets.PYPI_API_TOKEN }}
