--- a/.github/workflows/publish-poetry.yml
+++ b/.github/workflows/publish-poetry.yml
@@ -1,8 +1,6 @@
 name: Publish Python Package with poetry
 
-on:
-  release:
-    types: [ published ]
+on: [push]
 
 jobs:
   build:
@@ -15,7 +13,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.11'
 
       - name: Install Poetry
         run: curl -sSL https://install.python-poetry.org | python3 -
