--- a/.github/workflows/publish-poetry.yml
+++ b/.github/workflows/publish-poetry.yml
@@ -51,4 +51,6 @@ jobs:
         run: poetry build
 
       - name: Publish to PyPI
+        env:
+          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_API_TOKEN }}
         run: poetry publish --build --username __token__ --password ${{ secrets.PYPI_API_TOKEN }}
