--- a/.github/workflows/python-publish-with-pip.yml
+++ b/.github/workflows/python-publish-with-pip.yml
@@ -17,24 +17,22 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
-
+  build:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.11'
-    - name: Install dependencies
+        python-version: '3.10'  # Укажите необходимую версию Python
+    - name: Install Poetry
+      run: curl -sSL https://install.python-poetry.org | python3 -
+    - name: Configure Poetry
       run: |
-        python -m pip install --upgrade pip
-        pip install build setuptools wheel twine
-    - name: Build package
-      run: python -m build
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        poetry config virtualenvs.create false
+    - name: Install dependencies
+      run: poetry install --no-interaction --no-ansi
+    - name: Publish to PyPI
+      env:
+        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_API_TOKEN }}
+      run: poetry publish --build --username __token__ --password ${{ secrets.PYPI_API_TOKEN }}
