--- a/.github/workflows/python-publish-with-pip.yml
+++ b/.github/workflows/python-publish-with-pip.yml
@@ -24,14 +24,14 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.10'  # Укажите необходимую версию Python
+        python-version: '3.11'
     - name: Install Poetry
       run: curl -sSL https://install.python-poetry.org | python3 -
     - name: Configure Poetry
       run: |
         poetry config virtualenvs.create false
     - name: Install dependencies
-      run: poetry install --no-interaction --no-ansi
+      run: poetry install
     - name: Publish to PyPI
       env:
         POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_API_TOKEN }}
