--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -58,8 +58,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
         run: |
-          git config global --global user.name "github-actions[bot]"
-          git config global --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           VERSION=$(echo v${{ steps.poetry_version.outputs.version }})
           git tag $VERSION
           git push origin $VERSION
