--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -63,3 +63,14 @@ jobs:
           VERSION=$(echo v${{ steps.poetry_version.outputs.version }})
           git tag $VERSION
           git push origin $VERSION
+
+      - name: Create GitHub Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+        with:
+          tag_name: "v${{ env.VERSION }}"
+          release_name: "Release v${{ env.VERSION }}"
+          body: "Release of version v${{ env.VERSION }}."
+          draft: false
+          prerelease: true
