--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -34,11 +34,10 @@ jobs:
           echo "SELECTEL_ACCOUNT_ID=${{ secrets.SELECTEL_ACCOUNT_ID }}" >> .env
           echo "SELECTEL_PASSWORD=${{ secrets.SELECTEL_PASSWORD }}" >> .env
 
-
       - name: Run tests
         run: poetry run pytest
 
-  create_tag:
+  create_tag_and_release:
     needs: test
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-22.04
@@ -50,7 +49,7 @@ jobs:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
           fetch-depth: '0'
 
-      - name: Get Version from Poetry
+      - name: Get version from Poetry
         id: poetry_version
         run: echo "VERSION=$(poetry version -s)" >> $GITHUB_ENV
 
@@ -63,3 +62,14 @@ jobs:
           TAG="v${{ env.VERSION }}"
           git tag $TAG
           git push origin $TAG
+
+      - name: Create GitHub Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+        with:
+          tag_name: "v${{ env.VERSION }}"
+          release_name: "Release v${{ env.VERSION }}"
+          body: "Release of version v${{ env.VERSION }}."
+          draft: false
+          prerelease: false
